sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:13: error: ')' expected but ',' found.
    for (i <- getNombreValeurs()-2, 0, -1){
                                  ^AlgCocktailSort1:19: error: illegal start of simple expression
  }while(ech)
  ^