sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var ech = true
  do {
    ech = false
    for (i <- 0 getNombreValeurs() - 2 ){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        ech = true
      }
      
    }
    for (i <- getNombreValeurs()-2, 0, -1){
      if(plusPetit(i+1,i)){
        echange(i,i+1)
        ech = true
      }
    }
  }while(ech)
}